--- a/AndroidJavascriptBridge-master/res/layout/activity_main.xml
+++ b/AndroidJavascriptBridge-master/res/layout/activity_main.xml
@@ -14,6 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv1"
-        android:text="点击打开webview" />
+        android:text="点击进行支付" />
 
 </RelativeLayout>
